middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: devops-proektna-namespace
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /backend
