statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: emt-lab-db
  namespace: devops-proektna-namespace
spec:
  serviceName: "emt-lab-db"
  replicas: 1
  selector:
    matchLabels:
      app: emt-lab-db
  template:
    metadata:
      labels:
        app: emt-lab-db
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
