backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-proektna-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
